fix: style shifted from global.css to tailwind config file

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,55 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* font */
-
-.heading1 {
-  font-family: "Lora", serif;
-  font-size: 48px;
-  line-height: 125%;
-  letter-spacing: 1px;
-}
-
-.heading2 {
-  font-family: "Lora", serif;
-  font-size: 36px;
-  line-height: 125%;
-}
-
-.heading3 {
-  font-family: "Lora", serif;
-  font-size: 28px;
-  line-height: 125%;
-}
-
-.heading4 {
-  font-family: "Lora", serif;
-  font-size: 20px;
-  line-height: 125%;
-}
-
-.body1 {
-  font-family: "Inter", sans-serif;
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 1.4px;
-  font-weight: 400;
-}
-
-.body2 {
-  font-family: "Inter", sans-serif;
-  font-size: 14px;
-  line-height: 150%;
-  letter-spacing: 2px;
-}
-
-.body3 {
-  font-family: "Inter", sans-serif;
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 2px;
-}
-
 .bg-gradiant-pink-spot-1 {
   background: radial-gradient(
     ellipse at center,
